hts-tvheadend (2.5) hts; urgency=low

  * If a previosly detected DVB adapters was not present during startup,
    Tvheadend would crash. This is now fixed.

  * If XMLTV grabbing was disabled tvheadend would spin in a 100% CPU loop.
    This is now fixed.

hts-tvheadend (2.4) hts; urgency=low

  * Due to a bug, the polarisation of DVB-S muxes was not correctly
    stored internally. This has now been fixed.

  * Fix compilation on 64bit systems

  * Make sure channel <> service mappings are saved when edited from
    DVB service grid

  * Add support for merging one channel into another. 
    Useful if you have multiple providers offering the same DVB service
    but with different names.

  * The embedded HTTP server now logs failed requests

  * Use absolute paths when serving static content (the web app itself)
    This was only a problem when fork()ing a development build

  * Rework the CWC reconnection strategy.
    If there are active subscription, Tvheadend will attempt to reconnect
    immediately and then retry every three seconds.
    If no subscription is active a reconnection attempt is performed
    every minute.
    Also, if any CWC configuration changes are made from the UI, Tvheadend
    will try to reconnect directly.

  * If the EPG receives an updated description for an even that is shorter
    than the current description it will be ignored.
    This typically happens if the XMLTV and DVB EIT (Event Information Table)
    differs. In other words, we assume that a longer description of an
    event is better than a short.

 -- Andreas Öman <andreas@lonelycoder.com>  Sun, 26 Jul 2009 13:27:32 +0200

hts-tvheadend (2.3) hts; urgency=low

  * A simple web interface has been added. To access it, visit

    http://host:9981/simple.html

    This web interface is designed to be really tiny with only
    a simple search field and options to record found shows.
    Preferably used from handheld devices.
