@@ -1,0 +1,1 @@
+void avahi_init(void);
